# Thesis-

./: .gitignore  Dockerfile.build  README.md  init.sh  roscommands.txt  runContainer.py  startup.sh  startup2.sh  updateCode.py
Control Algorithms/Kalman Filter/: EKF.slx  EKF.slx.autosave  EKF.slxc  config.m  myMeasurementFcn.m  myStateTransitionFcn.m
Control Algorithms/Navigation_Stack/: CoordinateTransform.m  Plot.mlx  experiment_1_encoder_pose.mat  myFunction.m  nav2.slxc  navigation.slx  navigation.slx.autosave  navigation.slxc  setup.m  start.m  test.m  todo.txt
Control Algorithms/Navigation_Stack_2/: check_map.mlx  exampleHelperVisualizeExecuteRobots.m  generate_figures.mlx  idealPID.mat  joystick.slx  joystick2.slx  joystick21.slx  nav2.slx  nav2.slx.autosave  nav2.slxc  (+23 more)
Sensor Logging/: batteryIndicator.mlx
Website/: app.js  turtlesimjoystick.html
nodejs tutorial/: app.js
nodejs_tutorial/: app.js  package-lock.json  package.json  tutorial.js
shellCommander/: CMakeLists.txt  code2pdf.sh  package.xml
shellCommander/include/: CameraSensor.h  LaserScanner.h  MazeSolverBot.h  RobotChassis.h
shellCommander/launch/: mazeSolver_closed.launch  mazeSolver_open.launch  trajectory.rviz
shellCommander/models/enclosed_maze/: model.config  model.sdf
shellCommander/models/open_maze/: model.config  model.sdf
shellCommander/models/turtlebot3_burger_camera/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
shellCommander/src/: CameraSensor.cpp  LaserScanner.cpp  MazeSolverBot.cpp  RobotChassis.cpp  maze_solver_oop_main.cpp  rviz_click_to_2d.cpp
(+2729 files in other folders)
